<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutScreen" >

    <TextView
        android:id="@+id/textVersionNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/versionNum"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textVersionNo"
        android:text="@string/developersInfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/backButton1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/backButton" />

    <ListView
        android:id="@+id/listInfoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textVersionNo"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2" >

    </ListView>

</RelativeLayout>